<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">


    <LinearLayout
        android:id="@+id/showcase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5EA0BF"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app_title"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/search_for_a_song_get_the_lyrics"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_search"
            android:fontFamily="@font/lobster_two"
            android:hint="@string/artist_name"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:letterSpacing="0.1"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_search"
            android:fontFamily="@font/lobster_two"
            android:hint="@string/song_title"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:letterSpacing="0.1"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_get_song_lyrics"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#EAEFF3"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/get_song_lyrics"
            android:textAllCaps="false"
            android:textColor="@color/color_primary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/lyrics_result"
        style="@style/CustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/lyrics"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showcase" />


    <TextView
        android:id="@+id/song_lyrics"
        style="@style/CustomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/light_black"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyrics_result" />


        <ProgressBar
            android:id="@+id/loading_progressBar"
            style="?attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.739" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_save_lyrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/color_primary"
            android:contentDescription="@string/saved_lyrics"
            android:src="@drawable/ic_favorite"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>